--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -3,6 +3,161 @@
     Feedbacks
     <a href="/feedbacks/new" class="btn btn-lg btn-success">New Feedback</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => collapse_search_form, :id => "feedbacks_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+    <%= f.label :mentor_visible_eq, "Mentor visible" %>
+    <div>
+      <label class="radio-inline">
+        <%= f.radio_button :mentor_visible_eq, "1", checked: ((params[:q] && params[:q][:mentor_visible_eq]) == "1" ? "checked" : "") %> Yes
+      </label>
+      <label class="radio-inline">
+        <%= f.radio_button :mentor_visible_eq, "0", checked: ((params[:q] && params[:q][:mentor_visible_eq]) == "0" ? "checked" : "")%> No
+      </label>
+      <label class="radio-inline">
+        <%= f.radio_button :mentor_visible_eq, ""%> Either
+      </label>
+    </div>
+  </div>
+
+<div class="form-group">
+    <%= f.label :receiver_visible_eq, "Receiver visible" %>
+    <div>
+      <label class="radio-inline">
+        <%= f.radio_button :receiver_visible_eq, "1", checked: ((params[:q] && params[:q][:receiver_visible_eq]) == "1" ? "checked" : "") %> Yes
+      </label>
+      <label class="radio-inline">
+        <%= f.radio_button :receiver_visible_eq, "0", checked: ((params[:q] && params[:q][:receiver_visible_eq]) == "0" ? "checked" : "")%> No
+      </label>
+      <label class="radio-inline">
+        <%= f.radio_button :receiver_visible_eq, ""%> Either
+      </label>
+    </div>
+  </div>
+
+<div class="form-group">
+    <%= f.label :comment_cont, "Comment contains" %>
+    <%= f.text_field :comment_cont, :class => "form-control", :placeholder => "Comment contains" %>
+  </div>
+
+<div class="form-group">
+  <%= f.label :grade, "Grade" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :grade_gteq, :class => "form-control", :placeholder => "Grade greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :grade_lteq, :class => "form-control", :placeholder => "Grade less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        <div class="form-group">
+      <%= f.label :sender_user_name_cont, "User name contains" %>
+      <%= f.text_field :sender_user_name_cont, :class => "form-control", :placeholder => "User name contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :receiver_user_name_cont, "User name contains" %>
+      <%= f.text_field :receiver_user_name_cont, :class => "form-control", :placeholder => "User name contains" %>
+    </div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Staffing Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='staffinggteqcreated_atPicker'>
+                  <%= f.text_field :staffing_created_at_gteq, :class => "form-control", :placeholder => "Staffing Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='staffinglteqcreated_atPicker'>
+                  <%= f.text_field :staffing_created_at_lteq, :class => "form-control", :placeholder => "Staffing Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#staffinggteqcreated_atPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#staffinglteqcreated_atPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#staffinggteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#staffinglteqcreated_atPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#staffinglteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#staffinggteqcreated_atPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+<div class="form-group">
+      <%= f.label :subdimension_name_cont, "Subdimension name contains" %>
+      <%= f.text_field :subdimension_name_cont, :class => "form-control", :placeholder => "Subdimension name contains" %>
+    </div>
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/feedbacks" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#feedbacks_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
