--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -3,6 +3,119 @@
     Roles
     <a href="/roles/new" class="btn btn-lg btn-success">New Role</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => collapse_search_form, :id => "roles_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+    <%= f.label :name_cont, "Name contains" %>
+    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
+  </div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        <div class="form-group">
+          <%= f.label :created_at, "Staffing Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='staffingsgteqcreated_atPicker'>
+                  <%= f.text_field :staffings_created_at_gteq, :class => "form-control", :placeholder => "Staffing Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='staffingslteqcreated_atPicker'>
+                  <%= f.text_field :staffings_created_at_lteq, :class => "form-control", :placeholder => "Staffing Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#staffingsgteqcreated_atPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#staffingslteqcreated_atPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#staffingsgteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#staffingslteqcreated_atPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#staffingslteqcreated_atPicker').on("dp.change", function (e) {
+                  $('#staffingsgteqcreated_atPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+<div class="form-group">
+      <%= f.label :subdimensions_name_cont, "Subdimension name contains" %>
+      <%= f.text_field :subdimensions_name_cont, :class => "form-control", :placeholder => "Subdimension name contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :users_name_cont, "User name contains" %>
+      <%= f.text_field :users_name_cont, :class => "form-control", :placeholder => "User name contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :projects_name_cont, "Project name contains" %>
+      <%= f.text_field :projects_name_cont, :class => "form-control", :placeholder => "Project name contains" %>
+    </div>
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/roles" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#roles_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
